ai_robot_ws/log/build_2025-11-15_04-40-32/ai_robot_hardware_drivers/stderr.log
  File "/home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/ir_sensor_node.py", line 109
    left_
         ^
SyntaxError: expected 'except' or 'finally' block

